---
source: e2e/tests/snm_test.rs
expression: res
---
id: 1
is: snm node install 20.0.0


stdout:🎉 Node v20.0.0 is installed
stderr:
status:0


id: 2
is: snm node list --compact


stdout:20.0.0
stderr:
status:0


id: 3
is: snm node uninstall 20.0.0


stdout:🎉 Node v20.0.0 is uninstalled
stderr:
status:0


id: 4
is: snm node list --compact


stdout:😿 Local node list is empty
stderr:
status:0
